--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
     display: flex;
     width: 100%;
     height: auto;
-    position: sticky;
+    /* position: sticky; */
     top: 0;
 }
 .logo {  
@@ -26,7 +26,7 @@
     flex: 1;
     font-family: 'EB Garamond', serif;
     /* font-family: 'Montez', cursive; */
-    font-size: 50px;
+    font-size: 30px;
     padding: 18px;
     text-transform: 
         height: 150px;
@@ -61,10 +61,10 @@ flex: 3px;
 }
 .menu ul li a {
     display: inline-flex;
-    width: 80px;
-    height: 80px;
+    width: 50px;
+    height: 50px;
     color: #fff;
-    font-size: 50px;
+    font-size: 40px;
     text-decoration: none;
     background: red;
     margin: 0 60px;
