--- a/styles.css
+++ b/styles.css
@@ -61,14 +61,14 @@ flex: 3px;
 }
 .menu ul li a {
     display: inline-flex;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     color: #fff;
-    font-size: 40px;
+    font-size: 30px;
     text-decoration: none;
     background: red;
     margin: 0 60px;
-    border-radius: 50%;
+    border-radius: 70%;
     justify-content: center;
     align-items: center;
     transition: 0.4s;
@@ -95,20 +95,20 @@ flex: 3px;
     text-align: left;
     width: 75%;
 }
-.banner-text-items h2 {
+/* .banner-text-items h2 {
     font-size: 3em;
     margin-bottom: 20px;
     text-transform: uppercase;
-}
-.banner-text-items p {
+} */
+/* .banner-text-items p {
     font-size: 18px;
-}
+} */
 /* main-content */
 
 .main-content {
-    /* display: -webkit-box;
+    display: -webkit-box;
     display: -webkit-flex;
-    display: -ms-flexbox; */
+    display: -ms-flexbox;
     /* Photo by Mockup Graphics on Unsplash */
     display: flex;
     -webkit-box-orient: horizontal;
@@ -122,9 +122,9 @@ flex: 3px;
     display: center;
 }
 .main1 {
-    /* -webkit-box-flex: 1;
+    -webkit-box-flex: 1;
     -webkit-flex: 1;
-    -ms-flex: 1; */
+    -ms-flex: 1;
     flex: 1;
     padding: 3%;
     text-align: center;
@@ -154,7 +154,7 @@ flex: 3px;
     background-color: #red;
 }
 
-.contact-items {
+/* .contact-items {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -213,7 +213,7 @@ flex: 3px;
     text-decoration: none;
     text-transform: uppercase;
 
-}
+} */
 
 @media all and (max-width:500px) {
     .top-bar{
@@ -275,12 +275,12 @@ flex: 3px;
 .menu ul li {
     padding: 5px;
 }
-.banner-text-items{
+/* .banner-text-items{
     width: 100%;
-}
-.banner-text-items h2 {
+} */
+/* .banner-text-items h2 {
     font-style: 1.5em;
-}
+} */
 .main-content {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -288,4 +288,3 @@ flex: 3px;
     -ms-flex-direction: column;
     flex-direction: column;
 } 
-}
