--- a/styles.css
+++ b/styles.css
@@ -1,65 +1,81 @@
-*{margin: 0;padding: 0;}
-.banner {
-    background: url("img/salsapic.jpg");
-    /* Photo by Jamie Coupaud on Unsplash */
-    width: 100%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.top-bar {
-    background-color: black;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    height: auto;
-    /* position: sticky; */
-    top: 0;
-}
-.logo {  
-    color: white;
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    font-family: 'EB Garamond', serif;
-    /* font-family: 'Montez', cursive; */
-    font-size: 30px;
-    padding: 18px;
-    text-transform: 
-        height: 150px;
-        width: 150px;
-    text-align: center;
-}
-.menu, {
--webkit-box-flex: 3px;
--webkit-flex: 3px;
--ms-flex: 3px;
-flex: 3px;
-}
-.menu ul, ul {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
+:root {
+    --primary-color: #333;
+    --secondary-color: #444;
+    --overlay-color: rgba(0, 0, 0, 0.7);
+  }
+  
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  
+  body {
+    font-family: 'Catamaran', sans-serif;
+    line-height: 1.6;
+    color: #333;
+    font-size: 1.1rem;
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4 {
+    line-height: 1.3;
+  }
+  
+  a {
+    color: #444;
+    text-decoration: none;
+  }
+  
+  ul {
     list-style: none;
-    margin-top: 10px;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-flow: row wrap;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap;
-}
-.menu ul li, {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    text-align: center;
-}
-.menu ul li a {
+  }
+  
+  img {
+    width: 100%;
+  }
+  
+  .container {
+    max-width: 1100px;
+    margin: auto;
+    overflow: hidden;
+    padding: 0 2rem;
+  }
+  
+  .navbar {
+    font-size: 1.2rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+    background-color: black;
+  }
+  
+  .navbar .container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    
+  }
+  
+  .navbar .logo {
+    font-size: 2rem;
+    color: red;
+    
+  }
+  
+  .navbar ul {
+    justify-self: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+  }
+  
+  .navbar a {
+    padding: 0 1rem;
+  }
+  .navbar ul li a {
     display: inline-flex;
     width: 40px;
     height: 40px;
@@ -73,218 +89,236 @@ flex: 3px;
     align-items: center;
     transition: 0.4s;
 }
-.menu ul li a:hover {
-    background: green;
-}
+  .navbar a:hover {
+    color: green;
+  }
+  
 
-
-/*banner*/
-
-.banner-text {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
+  .section-b {
+    position: relative;
+    background: url('../img/newsalsapic.jpg') no-repeat center center fixed;
+    -webkit-box-size: cover;
+    -moz background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    /* background: url('https://i.ibb.co/1RS1dqC/section-b.jpg') no-repeat bottom center/cover; */
+    height: 1000px;
+  }
+  
+  .section-b-inner {
+    color: #fff;
+    height: 100%;
     display: flex;
-    padding: 15%; 0;
-}
-.banner-text-items {
-    /* background-color: ; */
-    /* Photo by Angele J from Pexels */
-    color: white;
-    margin: 0;
-    text-align: left;
-    width: 75%;
-}
-/* .banner-text-items h2 {
-    font-size: 3em;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-} */
-/* .banner-text-items p {
-    font-size: 18px;
-} */
-/* main-content */
-
-.main-content {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    /* Photo by Mockup Graphics on Unsplash */
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-flow: row wrap;
-    -ms-flex-flow: row wrap;
-    flex-flow: row wrap;
-    padding: 5% 0;
-}
-.main-content ul li {
-    display: center;
-}
-.main1 {
-    -webkit-box-flex: 1;
-    -webkit-flex: 1;
-    -ms-flex: 1;
-    flex: 1;
-    padding: 3%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    font-size: 30px;
+    margin: auto;
+    max-width: 860px;
+    padding: 5rem 0;
+  }
+  
+  .section-b-inner h3 {
+    font-size: 2rem;
+  }
+  
+  .section-b-inner h2 {
+    font-size: 5rem;
+    margin-top: 1rem;
+  }
+  
+  .section-b-inner p {
+    margin-top: 1rem;
+    font-size: 1.5rem;
+  }
+  
+  .section-c .gallery {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    padding: 10px;
+  }
+  .section-c .gallery a:first-child {
+    /* grid-row-start: 1;
+    grid-row-end: 3; */
+    grid-row: 1/3;
+    grid-column: 1/3;
+    padding: 10px;
+  
+  }
+  
+  .section-c .gallery a:nth-child(2) {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    padding: 5px;
+  
+  }
+  
+  .section-c .gallery img,
+  .section-c .gallery a {
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+  }
+  
+
+  
+  /* kjfkldjflk */
+
+  .section-footer {
+    background: var(--primary-color);
     color: white;
-}
-.main1 ul {
-    background-color: #red;
-}
-*{
+    padding: 4rem 0;
+  }
+  
+  .section-footer .container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 1rem;
+  }
+  
+  .section-footer h2 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+  
+  .section-footer h3 {
+    margin-bottom: 0.7rem;
+  }
+  
+  .section-footer a {
+    line-height: 1.9;
+    color: #ccc;
+  }
+  
+  .section-footer a > i {
+    color: red;
+    margin-right: 0.5rem;
+    
+  }
+  
+  /* .email-form {
+    width: 100%;
+    display: inline-block;
+    background-color: #555;
+    position: relative;
+    border-radius: 20px;
+    line-height: 0;
+    margin-top: 1rem;
+  } */
+  
+  /* // .form-control-wrap {
+  //  position: relative;
+  //  display: inline-block;
+  //  width: 100%;
+  // } */
+/*   
+  .email-form .form-control {
+    display: inline-block;
+    border: 0;
+    outline: 0;
+    font-size: 1rem;
+    color: #ddd;
+    background-color: transparent;
+    font-family: inherit;
+    margin: 0;
+    padding: 0 3rem 0 1.5rem;
+    width: 100%;
+    height: 45px;
+    border-radius: 20px;
+  }
+  
+  .email-form .submit {
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 45px;
+    height: 45px;
+    background-color: #eee;
+    font-size: 1rem;
+    text-align: center;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-    font-family: 'Ubuntu', sans-serif;
+    outline: 0;
+    border: 0;
+    color: #333;
+    cursor: pointer;
+    border-radius: 0 20px 20px 0;
+  } */
+  
+  /* .btn {
+    display: inline-block;
+    background: var(--primary-color);
+    color: #fff;
+    padding: 0.8rem 1.5rem;
+    border: none;
+    cursor: pointer;
+    font-size: 1.1rem;
+    border-radius: 30px;
   }
   
-  body{
-    background: maroon;
-    margin: 0 10px;
+  .btn:hover {
+    background: var(--secondary-color);
   }
   
-  
-
-.wrapper {
-    margin: 0 auto;
-    width: 900px;
-    background-color: #red;
-}
-
-/* .contact-items {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-}
-.contact {
-    background: red;
-    padding: 80px 0;
-    position: relative
-    z-index: 1;
-}
-.contact:before {
-    position: absolute;
-    content: '';
+  .overlay {
     height: 100%;
-    width: 100px;
+    width: 100%;
+    position: absolute;
     top: 0;
     left: 0;
-    background: rgba(0,0,0,5);
-    z-index: -1;
-}
-.contact-items h2 {
-    color: #fff;
-    font-family: 'Montez', cursive;
-    font-style: 40px;
-    margin-bottom: 18px;
-}
-.contact-items input[type="text"] {
-    border-radius: 10px;
-    margin-bottom: 15px;
-    padding: 15px;
-    width: 50%;
-}
-.contact-items textarea {
-    border-radius: 10px;
-    height: 150px;
-    padding: 15px;
-    width: 50%;
-}
-.contact-items a {
-    background: #da4b29;
-    color: #fff;
-    display: block;
-    font-style: 20px;
-    margin-top: 25px;
-    padding: 15px 80px;
-    text-decoration: none;
-    text-transform: uppercase;
+    background-color: var(--overlay-color);
+  } */
+  
+  @media (max-width: 700px) {
+    .section-a .container {
+      grid-template-columns: 1fr;
+      text-align: center;
+    }
+  
+    .section-a .container div:first-child {
+      order: 2;
+    }
+  
+    .section-a .container div:nth-child(2) {
+      order: -1;
+    }
+  
+    .section-a img {
+      width: 80%;
+      margin: auto;
+    }
+  
+    .section-c .gallery {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+    }
+    .section-c .gallery a:first-child {
+      grid-row: 1/1;
+      grid-column: 1/1;
+    }
+  
+    .section-c .gallery a:nth-child(2) {
+      grid-column: 2/4;
+      grid-row: 2/2;
+    }
+  
+    .section-c .gallery a:last-child {
+      display: none;
+    }
+  
+    .section-footer {
+      padding: 2rem 0;
+    }
+    .section-footer .container {
+      grid-template-columns: 1fr;
+      text-align: center;
+    }
+  
+    .section-footer div:nth-child(2),
+    .section-footer div:nth-child(3) {
+      display: none;
+    }
+  }
 
-} */
-
-@media all and (max-width:500px) {
-    .top-bar{
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        text-align: center;
-    }
-    .logo {
-        padding: 18px 0 0;
-    }
-    .menu ul {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        margin-top: 0;
-    }
-.menu ul li {
-    padding: 5px;
-}
-.banner-text-items{
-    width: 100%;
-}
-.banner-text-items h2 {
-    font-style: 1.5em;
-}
-.main-content {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-}
-}
-@media all and (max-width:800px) {
-    .top-bar{
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        text-align: center;
-    }
-    .logo {
-        padding: 18px 0 0;
-    }
-    .menu ul {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        margin-top: 0;
-    }
-.menu ul li {
-    padding: 5px;
-}
-/* .banner-text-items{
-    width: 100%;
-} */
-/* .banner-text-items h2 {
-    font-style: 1.5em;
-} */
-.main-content {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-} 
+  
