--- a/css/styles.css
+++ b/css/styles.css
@@ -17,10 +17,7 @@
     font-size: 1.1rem;
   }
   
-  h1,
-  h2,
-  h3,
-  h4 {
+  h1, h2, h3, h4 {
     line-height: 1.3;
   }
   
@@ -93,6 +90,7 @@
     color: green;
   }
   
+  
 
   .section-b {
     position: relative;
@@ -152,7 +150,18 @@
     padding: 5px;
   
   }
+  .section-c .gallery a:nth-child(3) {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    padding: 5px;
   
+  }
+  .section-c .gallery a:nth-child(4) {
+    grid-column-start: 5;
+    grid-column-end: 6;
+    padding: 5px;
+  
+  }
   .section-c .gallery img,
   .section-c .gallery a {
     width: 100%;
