--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,8 @@
   
   img {
     width: 100%;
+    object-position: 50% 50%;
+    object-fit: cover;
   }
   
   .footer-container{
@@ -201,6 +203,9 @@
     text-align: center;
     margin: 0 auto;
     grid-gap: 10px;
+    width: 100%;
+    height: 100%;
+    position: relative;
   }
 /* .section-c .gallery div{
   padding: 30px;
@@ -213,6 +218,7 @@
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 3;
+  background-size: contain;
   
 }
 .grid-list {
@@ -237,6 +243,16 @@ margin-left: 20px;
   font-family: 'Montez', cursive; 
   font-size: 50px; 
 }
+.gallery .image{
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.gallery .image img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 
 /*   */
@@ -246,6 +262,11 @@ margin-left: 20px;
   grid-column-end: 4;
   color: white;
   justify-items: ;
+}
+.section-c .gallery .img {
+  width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 .section-c .gallery div:nth-child(4) {
   background-color: green;
@@ -264,6 +285,8 @@ margin-left: 20px;
     width: 100%;
     height: 100%;
     padding: 5px;
+    object-fit: cover;
+    object-position: 50% 50%;
   }  
   /* FOOTER */
 
