--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
     --secondary-color: #444;
     --overlay-color: rgba(0, 0, 0, 0.7);
   }
+  
   * {
     box-sizing: border-box;
     margin: 0;
@@ -15,6 +16,10 @@
     line-height: 1.6;
     color: #333;
     font-size: 1.1rem;
+
+    margin:20px;
+    padding:0;
+    text-align:center;
   }
   
   h1, h2, h3, h4 {
@@ -36,12 +41,12 @@
     object-fit: cover;
   }
   
-  .footer-container{
+  /* .footer-container{
     min-width: auto;
     margin: auto;
     overflow: hidden;
     padding: 0 2rem;
-  }
+  } */
   /* .container {
     max-width: auto;
     margin: auto;
@@ -109,51 +114,8 @@
     margin: 2rem 0;
   } */
 
-    /* display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 10px;
-    text-align: center;
-    margin: 0 auto;
-    font-size: 4rem; */
-
   
-  /* .section-a .container{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2rem;
-    font-size: 4rem;
-    justify-self: flex-end;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   
-  }
-  .section-a .container div:first-child {
-    background-color: yellow;
-    grid-column-start: 1;
-    grid-column-end: 2;
-  }
-  .section-a .container div:nth-child(2) {
-    grid-auto-rows: 10px;
-    background-color: orange;
-    grid-column-start: 2;
-    grid-column-end: 3;
-  
-  } */
-  
-  /* {
-    display: grid;
-    grid-template-columns: 2;
-    grid-gap: 10rem;
-    align-items: center;
-    justify-content: center;
-
-  } */
-  /* .section-a .item{
-    font-size: 4rem;
-    background-color: green;
-  } */
-
+ 
   .section-b {
     position: relative;
     background: url('../img/newsalsapic.jpg') no-repeat center fixed;
@@ -163,6 +125,7 @@
     background-size: cover;
     /* background: url('https://i.ibb.co/1RS1dqC/section-b.jpg') no-repeat bottom center/cover; */
     height: 900px;
+    width: 100%;
   
  
   }
@@ -194,7 +157,8 @@
     margin-top: 1rem;
     font-size: 10rem;
   }
-  
+
+
   .section-c .gallery {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -207,10 +171,7 @@
     height: 100%;
     position: relative;
   }
-/* .section-c .gallery div{
-  padding: 30px;
-  grid-gap: 10px;
-} */
+
 
 .section-c .gallery div:first-child {
   background-color: white;
@@ -228,6 +189,7 @@ text-align: left;
 margin-left: 20px;
 
 }
+
 .section-c .gallery div:nth-child(2) {
   grid-auto-rows: 30px;
   background-color: red;
@@ -239,23 +201,18 @@ margin-left: 20px;
   font-size: 30px; 
   
 }
+
+
+
+
+/*   */
+.section-c .gallery{
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
 .section-c .gallery h1 {
   font-family: 'Montez', cursive; 
   font-size: 50px; 
 }
-.gallery .image{
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.gallery .image img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-
-/*   */
 .section-c .gallery div:nth-child(3) {
   background-color: blue;
   grid-column-start: 3;
@@ -263,11 +220,7 @@ margin-left: 20px;
   color: white;
   justify-items: ;
 }
-.section-c .gallery .img {
-  width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+
 .section-c .gallery div:nth-child(4) {
   background-color: green;
   grid-column-start: 4;
@@ -280,41 +233,85 @@ margin-left: 20px;
     grid-column-end: 6;
     color: white;
   }
-  .section-c .gallery img,
-  .section-c .gallery a {
-    width: 100%;
-    height: 100%;
-    padding: 5px;
-    object-fit: cover;
-    object-position: 50% 50%;
+   
   }  
-  /* FOOTER */
-
-
+  /* MY original FOOTER */
+  /* .section-footer {
+    font-size: 2rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+    background-color: black;
+  }
   
-  .section-footer .footer{
+  .section-footer .footer-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    
+  }
+  
+  .section-footer .footer-item {
+    font-family: 'Montez', cursive; 
+    font-size: 2rem;
+    color: white;
+    text-align: center;
+    
+  }
+  .section-footer .footer {
+    justify-self: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .section-footer ul {
+    justify-self: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Montez', cursive; 
+    font-size: 2rem;
+    color: white;
+    text-align: center;
+  }
+  
+  .section-footer a {
+    padding: 0 1rem;
+  }
+  .section-footer ul li a {
+    display: inline-flex;
+    width: 40px;
+    height: 40px;
+    color: #fff;
+    font-size: 30px;
+    text-decoration: none;
+    background: red;
+    margin: 0 60px;
+    border-radius: 70%;
+    justify-content: center;
+    align-items: center;
+    transition: 0.4s;
+}
+  .section-footer a:hover {
+    color: green;
+  } */
+/* My ORIGINAL Footer Ends */
+  --------------------
+  .section-footer {
+    background: gray;
+    color: #fff;
+    padding: 4rem 0;
+  }
+  
+  .section-footer .container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     grid-gap: 1rem;
   }
-  .section-footer .footer-container div{
-    background: black;
-    color: white;
-    padding: 1rem 0;
-    text-align: center;
-  }
-  .section-footer .footer-container div:first-child {
-    text-align: center;
-    
-  }
-  .section-footer .footer-container div:nth-child(2) {
-    color: white;
-    font-size: 20px;  
-  }
+  
   .section-footer h2 {
-    font-size: 3rem;
+    font-size: 2rem;
     margin-bottom: 1rem;
-    
   }
   
   .section-footer h3 {
@@ -329,10 +326,9 @@ margin-left: 20px;
   .section-footer a > i {
     color: red;
     margin-right: 0.5rem;
-    
   }
   
-  /* .email-form {
+  .email-form {
     width: 100%;
     display: inline-block;
     background-color: #555;
@@ -340,14 +336,14 @@ margin-left: 20px;
     border-radius: 20px;
     line-height: 0;
     margin-top: 1rem;
-  } */
+  }
   
   /* // .form-control-wrap {
-  //  position: relative;
-  //  display: inline-block;
-  //  width: 100%;
+  // 	position: relative;
+  // 	display: inline-block;
+  // 	width: 100%;
   // } */
-/*   
+  
   .email-form .form-control {
     display: inline-block;
     border: 0;
@@ -380,8 +376,41 @@ margin-left: 20px;
     color: #333;
     cursor: pointer;
     border-radius: 0 20px 20px 0;
-  } */
-
+  }
+  
+  .btn {
+    display: inline-block;
+    background: var(--primary-color);
+    color: #fff;
+    padding: 0.8rem 1.5rem;
+    border: none;
+    cursor: pointer;
+    font-size: 1.1rem;
+    border-radius: 30px;
+  }
+  
+  .btn:hover {
+    background: var(--secondary-color);
+  }
+  
+  .overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--overlay-color);
+  }
+  
+  ----------------------
+  
+ 
+@media screen and (max-width: 500px){
+  .section-c .gallery{
+    grid-template-columns:  1fr;
+    grid-template-rows: 1fr;
+  grid-column: span 1;
+}
   @media (max-width: 700px) {
     .section-a .container {
       grid-template-columns: 1fr;
@@ -396,33 +425,19 @@ margin-left: 20px;
       order: -1;
     }
   
+    .section-b {
+      height: 400px;
+    }
+
+
     .section-a img {
       width: 80%;
       margin: auto;
     }
-  
-    /* .section-c .gallery {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-    }
-    .section-c .gallery a:first-child {
-      grid-row: 1/1;
-      grid-column: 1/1;
-    }
-  
-    .section-c .gallery a:nth-child(2) {
-      grid-column: 2/4;
-      grid-row: 2/2;
-    }
-  
-    .section-c .gallery a:last-child {
-      display: none;
-    } */
-  
     .section-footer {
       padding: 2rem 0;
     }
-    .section-footer .footer-container {
+    .section-footer .container {
       grid-template-columns: 1fr;
       text-align: center;
     }
@@ -431,5 +446,6 @@ margin-left: 20px;
     .section-footer div:nth-child(3) {
       display: none;
     }
-
+  
+    
   
